# battery-portal

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  compose.yml  package-lock.json  partitions.csv  sdkconfig
.github/workflows/: main_batteryportal.yml  pre-commit.yml
Arduino/BensSketch/: BensSketch.ino  html_pages.h
Arduino/I2CCommWithBensESP32/: README.md
Arduino/I2CCommWithBensESP32/master/: master.ino
Arduino/I2CCommWithBensESP32/slave/: slave.ino
Arduino/SimpleExample/: SimpleExample.ino  html_page.h
ESP32/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig_esp32  sdkconfig_linux  switch_target.sh
ESP32/components/esp_timer_stub/: CMakeLists.txt
ESP32/components/esp_wifi_stub/: CMakeLists.txt
ESP32/main/: CMakeLists.txt  ESP32.c  Kconfig.projbuild  get_new_cert.sh
ESP32/main/include/: AP.h  BMS.h  DNS.h  GPS.h  I2C.h  INV.h  LoRa.h  MESH.h  SLAVE.h  SPI.h  TASK.h  WS.h  cert.h  config.h  global.h  local_cert.h  utils.h
ESP32/main/src/: AP.c  BMS.c  DNS.c  GPS.c  I2C.c  INV.c  LoRa.c  MESH.c  SLAVE.c  SPI.c  TASK.c  WS.c  utils.c
LINUX/: CMakeLists.txt  sdkconfig
LINUX/main/: CMakeLists.txt  Kconfig.projbuild  LINUX.c
LINUX/main/include/: BMS.h  GPS.h  LoRa.h  MESH.h  WS.h  cert.h  config.h  global.h  utils.h
LINUX/main/src/: AP.c  BMS.c  GPS.c  LoRa.c  MESH.c  SPI.c  WS.c  utils.c
backend/: .env  .env.example  GPCCHEM.csv  requirements.txt  run.py  upload.py  utils.py
backend/WebJobs/TrainModel/: run.sh  train_model.py
backend/WebJobs/UpdateDatabase/: run.sh
backend/app/: __init__.py  battery.py  config.py  data.py  db.py  generate_simulated_data.ipynb  main.py  make_data.ipynb  make_data_type_1.ipynb  pay.py  twin.py  user.py  ws.py
backend/cert/: local_key.pem
backend/migrations/versions/: 034282959bbd_link_batteries_to_users.py  552e42731de2_change_column.py  5d8502cba9c5_add_table_for_ml_features.py  67fd856d7fd0_update_actual_db_to_changes.py  b2e847bdb6da_add_table_for_model_metadata.py  d0c90bae08f0_unnecessary_user_column.py  d24b3b3b7c00_add_table_for_ml_features.py  e3cd1a90590b_add_charge_columns.py  f8dfd6a80e34_add_subscription_column.py
batteries/: time_stamp_to_sec_elapsed.py
connect/: sdkconfig
connect/main/: connect.c
connect_bt/: CMakeLists.txt  sdkconfig
connect_bt/main/: connect.c
connect_bt_client/main/: connect.c
esp-idf/test/: sdkconfig  sdkconfig.old
esp-idf/test/main/: CMakeLists.txt  DNS.c  I2C.c  Kconfig.projbuild  html.h  test.c
frontend/: esp32.html  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  apiConfig.tsx  esp32.tsx  home.tsx
frontend/src/auth/: AuthContext.tsx  AuthRequire.tsx  UserAuthenticator.tsx
frontend/src/context/: SidebarContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  Backdrop.tsx
frontend/src/pages/: Blank.tsx  Dashboard.tsx  Db.tsx  Register.tsx  Settings.tsx  SignIn.tsx  SubscriptionManagement.tsx  UserProfiles.tsx  Users.tsx
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
img/: information_exchange.pptx
local/battery-portal/: CMakeLists.txt  sdkconfig
local/battery-portal/main/: CMakeLists.txt  Kconfig.projbuild  battery-portal.c
local/battery-portal/main/include/: AP.h  BMS.h  GPS.h  I2C.h  WS.h  config.h  global.h  utils.h
local/battery-portal/main/src/: AP.c  BMS.c  DNS.c  I2C.c  WS.c  utils.c
main/: CMakeLists.txt  DNS.c  I2C.c  Kconfig.projbuild  battery-portal.c  display_page.h  get_new_cert.sh  idf_component.yml  test.c
main/html/: about_page.h  change_page.h  connect_page.h  device_page.h  display_page.h  index_page.h  login_page.h  nearby_page.h  test_display_page.h  test_login_page.h
main/include/: AP.h  ARP.h  BMS.h  DNS.h  GPS.h  I2C.h  INV.h  LoRa.h  MESH.h  WS.h  ca_cert.h  cert.h  config.h  global.h  handlers.h  ping.h  utils.h
main/src/: AP.c  AP.h  ARP.c  BMS.c  DNS.c  DNS.h  GPS.c  I2C.c  I2C.h  INV.c  LoRa.c  MESH.c  WS.c  config.c  handlers.c  ping.c  test.c  utils.c
mesh/: CMakeLists.txt  notes.txt  sdkconfig
mesh/main/: CMakeLists.txt  Kconfig.projbuild  mesh.c
mesh/main/include/: LoRa.h  utils.h
mesh/main/src/: LoRa.c  utils.c
nginx/: battery-portal.conf  local_setup.sh
paper/: paper.tex
simulation/: generate_simulated_data.ipynb  requirements.txt  simulate_data.py  test.py
site/: app.py
site/templates/: index.html
static/: style.css
templates/: index.html
test_website/: run.py
test_website/app/: __init__.py  config.py  db.py  main.py  user.py  ws.py
test_website/app/templates/: index.html  info.html
test_website/migrations/: env.py
test_website/migrations/versions/: 2c9e866f8c2e_update_user_blueprint_tables.py  3439c6d78cbf_initiate.py  70ef787c836c_add_user_stuff.py  c2c752e5a5d7_add_live_websocket_column.py  e27d64d96b49_add_otc_and_wifi_to_batetry_data__esp_.py
tests/e2e/: conftest.py
website/: .env_development  .gitignore  README.md  app.py  battery.py  cert.pem  config.py  db.py  db.sql  initialisation.sh  key.pem  local_cert.pem  nginx.sh  portal.py  pytest.ini  requirements.txt  run.py  seed.py  start_webapp.sh  user.py  utils.py  ws.py
website/app/: __init__.py  battery_http.py  battery_status.py  battery_ws.py  config.py  db.py  main.py  pay.py  seed.py  user.py  ws.py
website/frontend/: README.md  battery.html  esp32.html  home.html  index.html  package-lock.json  package.json  vite.config.ts
website/frontend/src/: App.tsx  BatteriesPage.tsx  BatteryInfo.tsx  apiConfig.tsx  esp32.tsx  home.tsx  main.tsx
website/migrations/versions/: 0c5132a6a9ae_add_soc_and_health_columns.py  28d030dbaff2_change_battery_info_id_column_types.py  382b52a29ab2_change_lat_lon_fields.py  67fd856d7fd0_update_actual_db_to_changes.py  (+7 more)
website/model/: package-lock.json  package.json
website/static/: about.html  change.html  connect.html  device.html  display.html  homepage.html  login.html  nearby.html
website/templates/: esp_login.html  index.html  test.html
website/testtt/: package-lock.json  package.json
(+174 files in other folders)
